Kyoto alignment issues

--- a/kyoto.css
+++ b/kyoto.css
@@ -60,19 +60,19 @@ body.loaded {
 
   #pic1 {
     position:absolute;
-    top:110px;
+    top:112px;
     left:260px;
     width:425px;
   }
   #pic2 {
     position:absolute;
-    top:295px;
+    top:293px;
     left:260px;
     width:425px;
   }
   #pic3 {
     position:absolute;
-    top:500px;
+    top:508px;
     left:260px;
     width:425px;
   }
